Customised scrollbars and fixed html and body height

--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html,
+body {
+    margin: 0;
     height: 100%;
     width: 100%;
+    overflow: auto;
+}
+
+::-webkit-scrollbar {
+    background: transparent;
+    height: 2px;
+    width: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: white;
 }
 
 body {
     font-family: "Inter", sans-serif;
-    margin: 0;
     background: radial-gradient(
         circle at top left,
         #18191c,
